--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <script src="bind.js"></script>
 
 <script>
-    var module = angular.module('test', ['angularBindPolymer']);
+    var module = angular.module('test', []);
     module.controller("ctrl", ['$scope', function($scope) {
        // do stuff in your controller
     }]);
